# boardgamegeek-board-game-weight-ranking

./: CNAME  README.md  index.html  index.js  package-lock.json  package.json
.github/workflows/: bgg-data-mine.yaml
bgg-data-mining/: .gitignore  Makefile  pyproject.toml
bgg-data-mining/bgg_data_mining/: __init__.py
bgg-data-mining/bgg_data_mining/bgg/: __init__.py  bgg_client.py
bgg-data-mining/results/: board-games-ids-by-rank.json
css/: index.css
modules/bgg-client/: bgg-client.js  index.js
