[tool.poetry]
name = "bgg-data-mining"
version = "0.1.0"
description = "Generates Board Game Geek datasets that are not available through the web APIs."
authors = ["Marcus Vinicius Monteiro de Souza <marcusmonteirodesouza@gmail.com>"]
readme = "README.md"
packages = [{include = "bgg_data_mining"}]

[tool.poetry.dependencies]
python = "^3.11"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
